[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitscore"
version = "1.0.0"
authors = [
  { name="Tommy Riquet", email="tommy.riquet@hotmail.com" },
]
description = "A tool to get your git score"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TommyRiquet/GitScore"
"Bug Tracker" = "https://github.com/TommyRiquet/GitScore/issues"